# python-hexagonal-architecture-skeleton

./: .gitignore  LICENSE  README.md  pyproject.toml
