[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-hexagonal-architecture-skeleton"
version = "0.1.0"
description = "A clean template for Python applications following Hexagonal Architecture and DDD principles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
prod = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.8.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "apps*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
